@@ -14,6 +14,8 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5744] removed redundant HTML from the map monitoring page (Eduard, Pavels)
+A......... [ZBX-5744] fixed script.getscriptsbyhost returning an unnecessary array of hosts for each script (Eduard, Pavels)
 ..F....... [ZBX-5811] fixed no permissions error when change user group "status", "frontend access" and "debug mode" using link in user groups list (Oleg)
 A......... [ZBX-5751] fixed CDiscoveryRule get() and CItemPrototype get() "selectGraphs" parameter (Oleg)
 ..F....... [ZBX-5667] fixed host screen defined in template does not show item data for "Plain text" elements (Toms)
